# airflow-dbt-sales-analytics

./: .gitignore  Dockerfile.airflow  README.md  docker-compose.yml  exploration.ipynb  generated_sales_data.csv  ingest.py  main.py  pyproject.toml  requirements-airflow.txt  setup-airflow.sh  transform.py  utils.py
airflow/dags/: dbt_transformation.py  sales_data_pipeline.py
airflow/plugins/utils/: data_check.py
data_ingestion/: __init__.py  ingest.py  transform.py  utils.py
dbt_profiles/: profiles.yml
dbt_transform/: dbt_project.yml
dbt_transform/macros/tests/: positive-values-sql.sql  positive_values.sql
dbt_transform/models/marts/: dim_location.sql  dim_product.sql  fact_sales.sql  schema.yml
dbt_transform/models/staging/: schema.yml  sources.yml  stg_sales.sql
initdb/: init_sales_db.sql
misc/: dbt_profile.yml
scripts/: run_dbt.sh  setup-airflow.sh  setup.sh
