[project]
name = "hostaway-interview"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow>=2.10.5",
    "apache-airflow-providers-postgres==5.10.0",
    "dbt-core>=1.9.4",
    "dbt-postgres>=1.9.0",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=1.4.54",
]
